# MultiHopDatasetConstruction

./: .env.gpg  .gcs_blobbackup  .gitattributes  .gitignore  DOWNLOADS.md  README.md  categories_list_v3.csv  failed_heads.txt  fbwiki_relation_inverse.py  fbwiki_triplet_process.py  flake.nix  graph_builder_rdf.py  graph_inspect_rdf.py  relation_classification.py
reproducibility/: .gitignore  Readme.md  ansible.cfg  decrypt.sh  ensure_neo4j_dump.py  flake.nix  gce_inventory.py  gcp_compute.yaml  gcp_compute.yaml.gpg  noml-exp.json.gpg  pyproject.toml  requirements.txt  setup_neo4j_poetry.yml  spinup.sh
triplet_creations/: README.md  fbwiki_categories_creation.py  fbwiki_create_triplet.py  fbwiki_entity_data_retrieval.py  fbwiki_entity_forwarding.py  fbwiki_extract_node_set.py  fbwiki_relation_data_retrieval.py  fbwiki_relation_df.py  fbwiki_relation_list_retrieval.py  fbwiki_relation_process.py  fbwiki_statistics.py  fbwiki_tail_relationship_analysis.py  fbwiki_triplet_creation.py  fbwiki_triplet_process.py  fbwiki_triplet_process_alt.py  fbwiki_triplet_split.py  freebase_2_wikidata - part I.py  freebase_2_wikidata - part II.py  freebaseqa_2_fb15k.py  freebaseqa_2_wiki.py  freebaseqa_2_wiki_valids.py  freebaseqa_processing.py  get_node_info.py  graph_builder_neo4j.py  graph_builder_rdf.py  graph_builder_relationship_hierarchy.py  graph_builder_simple_neo4j.py  graph_export_neighborhood.py  graph_extract_paths.py  graph_inspect_kinship.py  graph_inspect_qid.py  graph_inspect_rdf.py  graph_multihop_kinship.py  jeopardy_2_wikidata.py  jeopardy_2_wikidata_bert.py  (+19 more)
(+493 files in other folders)
