[tool.poetry]
name = "reproducibility"
version = "0.1.0"
description = ""
authors = ["Luis Garcia <luisgarcia26284@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^10.3.0"
google-auth = "^2.34.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
