[tool.poetry]
name = "triplet-creations"
version = "0.1.0"
description = ""
authors = ["Eduin Hernandez <eduin.ee08@nycu.edu.tw>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
tqdm = "^4.66.5"
neo4j = "^5.23.1"
regex = "^2024.7.24"
matplotlib = "^3.9.1.post1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pyyaml = "^6.0.2"
debugpy = "^1.8.13"
dotenv = "^0.9.9"
openai = "^1.67.0"
tiktoken = "^0.9.0"
faiss-cpu = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
